--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script>
       $("document").ready(function () {
         const getArgsForEvent = async (payload) => {
-          const rq = await fetch("http://18.219.214.89:4000/firm", {
+          const rq = await fetch("http://18.219.214.89:4000/args", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
