--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <script src="https://dsp.reniec.gob.pe/refirma_invoker/resources/js/clientclickonce.js"></script>
 
-    <title>Vite + React</title>
+    <title>Sistema De Gestion | Inventario</title>
   </head>
   <body>
     <div id="root"></div>
